[package]
name = "eveboros"
version = "0.1.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]

[lib]
name = "eveboros"
path = "src/lib.rs"
harness = true
test = true

[dependencies]
mio = "0.6"
linked-hash-map = "0.3"
threadpool = "1.0"
libc = "0.2"
lazy_static = "0.2"
nix = "0.7"

[profile.dev]
codegen-units = 4

[profile.test]
codegen-units = 4
